[package]
name = "winput"
version = "0.1.0"
authors = ["Gymore <gymore.contact@gmail.com>"]
edition = "2018"
description = "A high-level interface to Windows's input system."
categories = ["os::windows-apis", "api-bindings"]
license = "MIT"
keywords = ["windows", "input", "simulation", "keyboard", "mouse"]

[lib]
# Most of doctests involve simulating keystrokes/mouse motion.
# It is quite troublesome to see random things getting typed when executing tests.
doctest = false

[features]
# Disables non-Windows related features.
minimal = []

[dependencies.winapi]
version = "0.3"
default-features = false
features = ["winuser", "errhandlingapi", "winbase", "windef"]

[badges.maintenance]
status = "passively-maintained"